<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity7">

    <ImageView
        android:id="@+id/fon6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/fon1"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="415dp"
        android:layout_height="24dp"
        app:srcCompat="@color/design_default_color_error" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#3749F1"
        android:onClick="vihod"
        android:text="НАЗАД"
        android:textSize="10sp"
        app:cornerRadius="9dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView18"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="29dp" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="Тамбов"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/fon6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fon6"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="5dp"
        app:layout_constraintEnd_toStartOf="@+id/fon6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fon6"
        app:layout_constraintTop_toBottomOf="@+id/textView43"
        app:srcCompat="@drawable/img9" />

    <TextView
        android:id="@+id/textView44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="Облачно"
        app:layout_constraintEnd_toStartOf="@+id/fon6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fon6"
        app:layout_constraintTop_toBottomOf="@+id/imageView19" />

    <TextView
        android:id="@+id/textView45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="16°"
        android:textSize="100sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/fon6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fon6"
        app:layout_constraintTop_toBottomOf="@+id/textView44" />

    <TextView
        android:id="@+id/textView46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="ощущается как 22°"
        app:layout_constraintEnd_toStartOf="@+id/fon6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fon6"
        app:layout_constraintTop_toBottomOf="@+id/textView45" />

    <TextView
        android:id="@+id/textView47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/t16"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/fon6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fon6"
        app:layout_constraintTop_toBottomOf="@+id/textView46" />

    <TextView
        android:id="@+id/textView48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/t17"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/fon6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fon6"
        app:layout_constraintTop_toBottomOf="@+id/textView47" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/t18"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/fon6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fon6"
        app:layout_constraintTop_toBottomOf="@+id/textView48" />
</androidx.constraintlayout.widget.ConstraintLayout>