<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4">

    <ImageView
        android:id="@+id/fon3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/fon1"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="415dp"
        android:layout_height="24dp"
        app:srcCompat="@color/design_default_color_error" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#3749F1"
        android:onClick="vihod"
        android:text="НАЗАД"
        android:textSize="10sp"
        app:cornerRadius="9dp"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="29dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"/>

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="Воронеж"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/fon3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fon3"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="5dp"
        app:layout_constraintEnd_toStartOf="@+id/fon3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fon3"
        app:layout_constraintTop_toBottomOf="@+id/textView22"
        app:srcCompat="@drawable/img5" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="Переменная облачность"
        app:layout_constraintEnd_toStartOf="@+id/fon3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fon3"
        app:layout_constraintTop_toBottomOf="@+id/imageView11" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="21°"
        android:textSize="100sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/fon3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fon3"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="ощущается как 22°"
        app:layout_constraintEnd_toStartOf="@+id/fon3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fon3"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/t7"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/fon3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fon3"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/t8"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/fon3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fon3"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/t9"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/fon3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fon3"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />
</androidx.constraintlayout.widget.ConstraintLayout>