<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity5">

    <ImageView
        android:id="@+id/fon4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/fon1"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="415dp"
        android:layout_height="24dp"
        app:srcCompat="@color/design_default_color_error" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#3749F1"
        android:onClick="vihod"
        android:text="НАЗАД"
        android:textSize="10sp"
        app:cornerRadius="9dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView13"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="29dp"
        />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="Саратов"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/fon4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fon4"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="5dp"
        app:layout_constraintEnd_toStartOf="@+id/fon4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fon4"
        app:layout_constraintTop_toBottomOf="@+id/textView29"
        app:srcCompat="@drawable/img4" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="Солнечно"
        app:layout_constraintEnd_toStartOf="@+id/fon4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fon4"
        app:layout_constraintTop_toBottomOf="@+id/imageView15" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="25°"
        android:textSize="100sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/fon4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fon4"
        app:layout_constraintTop_toBottomOf="@+id/textView30" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="ощущается как 22°"
        app:layout_constraintEnd_toStartOf="@+id/fon4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fon4"
        app:layout_constraintTop_toBottomOf="@+id/textView31" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/t10"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/fon4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fon4"
        app:layout_constraintTop_toBottomOf="@+id/textView32" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/t11"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/fon4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fon4"
        app:layout_constraintTop_toBottomOf="@+id/textView33" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/t12"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/fon4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fon4"
        app:layout_constraintTop_toBottomOf="@+id/textView34" />
</androidx.constraintlayout.widget.ConstraintLayout>